# ReCorPy

./: .gitignore  .pypirc  .readthedocs.yaml  CITATION.cff  README.md  pyproject.toml  tox.ini
.github/workflows/: python-app.yml
docs/: .readthedocs.yaml  Contact.rst  README.rst  conf.py  index.rst  modules.rst  recorpy.rst  recorpy.test.rst  requirements.txt
recorpy/: __init__.py  reorder.py
recorpy/test/: test_reorder.py
